# SymReg

./: Bob.txt  CMakeLists.txt  README.md  main.cpp
examples/f1/: f1.txt
examples/f1/results/HFC/f1_HFC-Cross_2024`3`6-19`54`32/: f1_HFC-Cross_2024`3`6-19`54`32_learn.txt
examples/f1/results/HFC/f1_HFC-Cross_2024`3`6-20`15`2/: f1_HFC-Cross_2024`3`6-20`15`2_learn.txt
examples/f1/results/HFC/f1_HFC-Cross_2024`3`6-21`25`27/: f1_HFC-Cross_2024`3`6-21`25`27_learn.txt
examples/f1/results/HFC/f1_HFC-Cross_2024`3`6-21`2`17/: f1_HFC-Cross_2024`3`6-21`2`17_learn.txt
examples/f1/results/HFC/f1_HFC-Cross_2024`3`6-22`48`34/: f1_HFC-Cross_2024`3`6-22`48`34_learn.txt
examples/f1/results/RMHC/f1_BGA-RMHC_2024`3`6-22`57`24/: f1_BGA-RMHC_2024`3`6-22`57`24_learn.txt
examples/f1/results/RMHC/f1_BGA-RMHC_2024`3`6-22`57`31/: f1_BGA-RMHC_2024`3`6-22`57`31_learn.txt
examples/f1/results/RMHC/f1_BGA-RMHC_2024`3`6-22`57`37/: f1_BGA-RMHC_2024`3`6-22`57`37_learn.txt
examples/f1/results/RMHC/f1_BGA-RMHC_2024`3`6-22`57`43/: f1_BGA-RMHC_2024`3`6-22`57`43_learn.txt
examples/f1/results/RMHC/f1_BGA-RMHC_2024`3`6-22`57`50/: f1_BGA-RMHC_2024`3`6-22`57`50_learn.txt
examples/f1/results/Random/f1_BGA-Random_2024`3`6-22`55`22/: f1_BGA-Random_2024`3`6-22`55`22_learn.txt
examples/f1/results/Random/f1_BGA-Random_2024`3`6-22`55`30/: f1_BGA-Random_2024`3`6-22`55`30_learn.txt
examples/f1/results/Random/f1_BGA-Random_2024`3`6-22`55`35/: f1_BGA-Random_2024`3`6-22`55`35_learn.txt
examples/f1/results/Random/f1_BGA-Random_2024`3`6-22`55`40/: f1_BGA-Random_2024`3`6-22`55`40_learn.txt
examples/f1/results/Random/f1_BGA-Random_2024`3`6-22`55`59/: f1_BGA-Random_2024`3`6-22`55`59_learn.txt
examples/f1/results/bga/f1_BGA-Cross_2024`3`6-18`51`21/: f1_BGA-Cross_2024`3`6-18`51`21_learn.txt
examples/f1/results/bga/f1_BGA-Cross_2024`3`6-18`53`0/: f1_BGA-Cross_2024`3`6-18`53`0_learn.txt
examples/f1/results/bga/f1_BGA-Cross_2024`3`6-19`25`42/: f1_BGA-Cross_2024`3`6-19`25`42_learn.txt
examples/f1/results/bga/f1_BGA-Cross_2024`3`6-19`5`14/: f1_BGA-Cross_2024`3`6-19`5`14_learn.txt
examples/f1/results/f1_BGA-Cross_2024`3`7-23`42`54/: f1_BGA-Cross_2024`3`7-23`42`54_learn.txt
examples/f1/results/f1_BGA-Cross_2024`3`8-0`23`51/: f1_BGA-Cross_2024`3`8-0`23`51_learn.txt
examples/f1/results/f1_BGA-RMHC_2024`3`7-23`44`20/: f1_BGA-RMHC_2024`3`7-23`44`20_learn.txt
examples/f1/results/f1_HFC-Cross_2024`3`7-23`45`1/: f1_HFC-Cross_2024`3`7-23`45`1_learn.txt
examples/f1/results/f1_HFC-Cross_2024`3`8-0`10`18/: f1_HFC-Cross_2024`3`8-0`10`18_learn.txt
examples/f1/results/f1_HFC-Cross_2024`3`8-0`13`43/: f1_HFC-Cross_2024`3`8-0`13`43_learn.txt
examples/f1/results/f1_HFC-Cross_2024`3`8-0`14`16/: f1_HFC-Cross_2024`3`8-0`14`16_learn.txt
examples/f1/results/f1_HFC-Cross_2024`3`8-0`23`6/: f1_HFC-Cross_2024`3`8-0`23`6_learn.txt
examples/f1/results/f1_HFC-Cross_2024`3`8-0`2`15/: f1_HFC-Cross_2024`3`8-0`2`15_learn.txt
examples/f2/: f2.txt
examples/f2/f2_BGA-Cross_2024`3`3-5`28`10/: f2_BGA-Cross_2024`3`3-5`28`10_learn.txt
examples/f2/f2_BGA-Cross_2024`3`3-5`32`17/: f2_BGA-Cross_2024`3`3-5`32`17_learn.txt
examples/f2/f2_BGA-Cross_2024`3`3-7`38`55/: f2_BGA-Cross_2024`3`3-7`38`55_learn.txt
examples/f2/f2_BGA-Cross_2024`3`3-7`39`16/: f2_BGA-Cross_2024`3`3-7`39`16_learn.txt
examples/f2/f2_HFC-Cross_2024`3`3-10`6`37/: f2_HFC-Cross_2024`3`3-10`6`37_learn.txt
examples/f2/f2_HFC-Cross_2024`3`3-7`42`49/: f2_HFC-Cross_2024`3`3-7`42`49_learn.txt
examples/f2/f2_HFC-Cross_2024`3`3-7`43`38/: f2_HFC-Cross_2024`3`3-7`43`38_learn.txt
examples/f2/results/f2_BGA-Cross_2024`3`3-7`41`52/: f2_BGA-Cross_2024`3`3-7`41`52_learn.txt
examples/f2/results/f2_BGA-Cross_2024`3`3-7`41`55/: f2_BGA-Cross_2024`3`3-7`41`55_learn.txt
examples/f2/results/f2_BGA-Cross_2024`3`3-7`42`5/: f2_BGA-Cross_2024`3`3-7`42`5_learn.txt
examples/f21/: f21.txt
examples/f21/results/f21_BGA-Cross_2024`3`16-14`51`49/: f21_BGA-Cross_2024`3`16-14`51`49_learn.txt
examples/f21/results/f21_BGA-RMHC_2024`3`16-11`24`28/: f21_BGA-RMHC_2024`3`16-11`24`28_learn.txt
examples/f21/results/f21_BGA-Random_2024`3`16-11`24`58/: f21_BGA-Random_2024`3`16-11`24`58_learn.txt
examples/f21/results/f21_HFC-Cross_2024`3`16-11`5`35/: f21_HFC-Cross_2024`3`16-11`5`35_learn.txt
examples/f21/results/f21_HFC-Cross_2024`3`16-14`55`28/: f21_HFC-Cross_2024`3`16-14`55`28_learn.txt
examples/f3/: f3.txt
gtests/: CMakeLists.txt  ContenderTest.cpp  FitnessTest.cpp  HeapTest.cpp  NodeTests.cpp  SelectionTest.cpp
gtests/lib/googlemock/include/gmock/internal/custom/: gmock-matchers.hZone.Identifier
gtests/lib/googletest/test/: googletest-catch-exceptions-test_.cc  googletest-output-test_.cc  googletest-throw-on-failure-test_.cc
resources/datasets/: data.txt
resources/protocols/: HFC-Cross.txt  exp1.sh  exp2.sh  exp3.sh
sandbox/: CMakeLists.txt  multVect.cpp  sandbox1  sandbox1.cpp  tree.cpp
scripts/: data_analysis.jl  graphs.jl  tdGen.jl  test.jl
scripts/data_vis/: data_vis.py
scripts/visualizations/: contender_test.py  experiment_test.py  test.py
scripts/visualizations/data_vis/: cohort.py  data_vis.py  plots.py  primitives.py
src/: CMakeLists.txt
src/DataIO/: DataLog.cpp  DataLog.h
src/Optimizers/: Contender.cpp  Contender.h  Optimizers.cpp  Optimizers.h
src/Structures/: Competitor.h  Contender.cpp  Contender.h  Heap.cpp  Heap.h  Node.cpp  Node.h  Point.cpp  Point.h  heap.cpp  heap.h
